# soothing-sounds

./: .appveyor.yml  .codeclimate.yml  .gitignore  .mypy.ini  .travis.yml  README.md  README.rst  generator.py  main.py  optional-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  signal.py  signal_acoustics.py  soothing.py  test.py  webform.py
.github/workflows/: ci.yml
soothingsounds/: __init__.py  generator.py  plots.py  signal_acoustics.py
src/soothingsounds/: __init__.py  __main__.py  generator.py  plots.py  signal_acoustics.py
src/soothingsounds/tests/: test_all.py
static/: styles.css
templates/: index.html
tests/: test.py  test_all.py
