[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soothingsounds"
dynamic = ["readme", "version"]
description = "Generate a variety of white/brown/pink noises good for relaxation"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sounddevice",
]
keywords = [
  "sound generation",
  "white noise",
  "brown noise",
  "pink noise",
  "blue noise",
  "violet noise",
  "relaxation",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "soothingsounds.__version__"}

[project.urls]
Homepage = "https://github.com/scivision/soothing-sounds"

[project.optional-dependencies]
tests = [
  "pytest",
  "mypy",
]
io = [
  "scipy",
  "pyfftw",
]

[tool.mypy]
files = ["."]
ignore_missing_imports = true
