[metadata]
name = soothingsounds
version = 1.0.0
author = Michael Hirsch, Ph.D.
description = Generate a variety of white/brown/pink noises good for relaxation
url = https://github.com/scivision/soothing-sounds
keywords =
  sound generation
  white noise
  brown noise
  pink noise
  relaxation
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  numpy
  sounddevice

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
io = 
  scipy
  pyfftw

[options.entry_points]
console_scripts =


[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
