[metadata]
name = soothingsounds
version = 1.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Generate a variety of white/brown/pink noises good for relaxation
url = https://github.com/scivision/soothing-sounds
keywords =
  sound generation
  white noise
  brown noise
  pink noise
  blue noise
  violet noise
  relaxation
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
scripts =
  soothing.py
install_requires =
  numpy
  sounddevice

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy
io =
  scipy
  pyfftw

[options.entry_points]
console_scripts =
