[metadata]
name = soothingsounds
version = 1.0.2
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Generate a variety of white/brown/pink noises good for relaxation
url = https://github.com/scivision/soothing-sounds
keywords =
  sound generation
  white noise
  brown noise
  pink noise
  blue noise
  violet noise
  relaxation
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Multimedia :: Sound/Audio :: Sound Synthesis
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
install_requires =
  numpy
  sounddevice
zip_safe = False
include_package_data = True
package_dir=
    =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
io =
  scipy
  pyfftw
